examples/l/tests/data/missing_arrow.diag
error: invalid syntax, expected one of: '->', '{'
  ┌─ <input>:1:10
  │
1 │ fn foo() i32 {
  │          ^^^

