examples/l/tests/data/missing_arrow.l
fn foo() i32 {
  let x = 42;
}
